# Musicplayer

./: .gitignore  Cargo.toml  README.md
audio/: Cargo.toml
audio/src/: backend.rs  decoder.rs  device.rs  dsd_decoder.rs  error.rs  filter.rs  lib.rs  metadata.rs  pipeline.rs  playback.rs  player.rs  spectrum.rs  symphonia_decoder.rs  symphony_decoder.rs  volume.rs  wasapi_backend.rs  wasapi_backend_old.rs  wasapi_control.rs
db/: Cargo.toml
db/src/: lib.rs  schema.sql
ui/: Cargo.toml
ui-app/: Cargo.toml
ui-app/src/: import.rs  import_original.rs  lyrics_parser.rs  main.rs  theme.rs
ui-app/src/aqua/: mod.rs
ui-app/src/components/: album_cover.rs  lyrics.rs  mod.rs  now_playing.rs  player_bar.rs  song_list.rs  title_bar.rs  vu_meter.rs
ui-app/src/sonic/: mod.rs
ui-app/src/styles/: aqua_glass.rs  mod.rs  sonic_flux.rs  vintage_pro.rs
ui-app/src/vintage/: mod.rs
ui/src/: lib.rs
ui/src/components/: app.rs  lyrics.rs  mod.rs  player.rs  song_card.rs
