[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.20"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "alac", "aac", "vorbis", "ogg", "aiff"] }
audiotags = "0.5"
lofty = "0.22"
dsd-reader = "0.2"
cpal = "0.15"
rustfft = "6.2"
rand = "0.8"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
] }

[features]
default = []
spectrum = []  # Enable spectrum analyzer
